[project]
name = "aiogram-metrics"
version = "1.0.2"
description = "Message metrics exporter for aiogram framework"
authors = [
    { name = "benyamin ginzburg", email = "benyamin+git@ginzburg.io" },
]
dependencies = [
    "aiogram",
    "psycopg-binary",
]
requires-python = ">=3.7"
readme = "README.md"

[project.license]
text = "GPL-3.0"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
source = [
    { name = "pypi", url = "https://pypi.org/simple", verify_ssl = true },
]

[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=67.7.2",
]
